[tool.poetry]
name = "jive-image-viewer"
version = "0.7.6"
description = "A general purpose, cross-platform image viewer with some built-in NSFW support."
authors = ["Jabba Laci <jabba.laci@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
imgurpython = "^1.1.7"
appdirs = "^1.4.4"
bs4 = "^0.0.1"
psutil = "^5.9.5"
pyyaml = "^6.0"
pytumblr = "^0.1.2"
pyqt5 = "=5.15.10"
pyqt5-qt5 = "=5.15.2"

[tool.poetry.dev-dependencies]


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pyinstaller = "^5.11.0"
pynt = "^0.8.2"
mypy = "^1.3.0"
pyqt5-stubs = "^5.15.6.0"
poetryup = "^0.12.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
