[project]
name = "jive-image-viewer"
version = "0.8.0"
description = "A general-purpose, cross-platform image viewer with some built-in NSFW support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "appdirs>=1.4.4",
    "bs4>=0.0.2",
    "imgurpython>=1.1.7",
    "psutil>=6.0.0",
    "pyqt5>=5.15.11",
    "pytumblr>=0.1.2",
    "pyyaml>=6.0.2",
]

[project.scripts]
jive = "jive.main:main"

[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
    "pytest>=8.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jive/"]
